----------------------------------------------------------------------
 OmegaT 2.1.5 update 1
----------------------------------------------------------------------
  1 Enhancement
  0 Bugfix
----------------------------------------------------------------------
2.1.5 update 1 vs. 2.1.5

  Implemented requests:

  - Memorize search settings after each search
  http://sourceforge.net/support/tracker.php?aid=1605843

----------------------------------------------------------------------
 OmegaT 2.1.5
----------------------------------------------------------------------
  3 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.1.5 vs. 2.1.4 update 1

  Implemented requests:

  - Load TMXs from nested folders
  http://sourceforge.net/support/tracker.php?aid=2986574

  - Insert exact matches from TMXs in the auto folder
  http://sourceforge.net/support/tracker.php?aid=2131989

  Other enhancements:

  - Filter search results in the Editor
For explanations, see Searches in the English documentation 

  Bug fixes:

  - Insert Source Tags miss tags when source text contains <
  http://sourceforge.net/support/tracker.php?aid=2987164

----------------------------------------------------------------------
 OmegaT 2.1.4 update 1
----------------------------------------------------------------------
  6 Enhancements
  6 Bugfixes
----------------------------------------------------------------------
2.1.4 update 1 vs. 2.1.4

  Implemented requests:

  - SRT filter: read time group into a single segment
  http://sourceforge.net/support/tracker.php?aid=2980046

  - Spell checker dialog improvements
  http://sourceforge.net/support/tracker.php?aid=2980991

  - TBX: recognize <descrip> elements
  http://sourceforge.net/support/tracker.php?aid=2978608

  - TBX: display termNotes only for target language
  http://sourceforge.net/support/tracker.php?aid=2978610

  Other enhancements:
